bk_ida/gobmkida/c3/dfa_add_string
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_add_string/src/patterns/dfa.c:1671:12: error: expected expression
*( _OWORD *)aux_temp.states[v21 + 1].next = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_add_string/src/patterns/dfa.c:1671:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_temp.states[v21 + 1].next = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_add_string/src/patterns/dfa.c:1711:12: error: expected expression
*( _OWORD *)aux_temp.states[v24].next = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_add_string/src/patterns/dfa.c:1711:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_temp.states[v24].next = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_add_string/src/patterns/dfa.c:1722:30: error: assigning to 'attrib_t' (aka 'struct attrib') from incompatible type 'long long'
aux_temp.indexes[last_index] = 0LL; 
                             ^ ~~~
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dfa_add_string/src/obj/3/dfa.o] Error 1
